--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-  "name": "idavoll/user-module",
+  "name": "denisgold/user-module",
   "type": "asgard-module",
-  "description": "User module for AsgardCMS. Handles the authentication and authorisation as well as the user management.",
+  "description": "User module for AsgardCMS. Handles the authentication and authorisation as well as the user management by Denis Stoliarchuk.",
   "keywords": [
     "asgardcms",
     "user",
@@ -11,16 +11,11 @@
   "license": "MIT",
   "authors": [
     {
-      "name": "Nicolas Widart",
-      "email": "info@asgardcms.com",
+      "name": "Denis Stoliarchuk",
+      "email": "dartius@mail.ru",
       "role": "Developer"
     }
   ],
-  "support": {
-    "email": "support@asgardcms.com",
-    "issues": "https://github.com/AsgardCms/Platform/issues",
-    "source": "https://github.com/AsgardCms/User"
-  },
   "require": {
     "php": ">=7.0.0",
     "composer/installers": "~1.0",
